--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Chat WebSocket</title>
+  <title>Chat WebSocket + HTTP</title>
   <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
+      max-width: 800px;
       margin: 40px auto;
     }
     #messages {
@@ -29,18 +29,26 @@
       display: flex;
       gap: 10px;
     }
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   </style>
 </head>
 <body>
 
-<h2>Chat WebSocket</h2>
+<div class="top-bar">
+  <p id="userDisplay"><strong>Usuario:</strong> (cargando...)</p>
+  <button onclick="logout()">Cerrar sesión</button>
+</div>
 
-<p id="userDisplay"><strong>Usuario:</strong> (cargando...)</p>
+<h2>Chat WebSocket + HTTP</h2>
 
 <div>
   <label>Sala ID:</label>
   <input type="text" id="room" placeholder="Ej: general" />
-  <button onclick="connectToRoom()">Entrar</button>
+  <button onclick="startChat()">Entrar</button>
 </div>
 
 <ul id="messages"></ul>
@@ -55,8 +63,10 @@
   let roomId;
   let username = null;
 
-  // Obtener nombre del usuario autenticado
-  fetch('/users/me', { credentials: 'include' })
+  // Obtener usuario autenticado (sin encabezado X-Requested-With)
+  fetch('/users/me', {
+    credentials: 'include'
+  })
     .then(response => {
       if (!response.ok) throw new Error("No autenticado");
       return response.json();
@@ -78,13 +88,31 @@
     li.scrollIntoView({ behavior: "smooth" });
   }
 
-  function connectToRoom() {
+  function startChat() {
     roomId = document.getElementById("room").value.trim();
     if (!roomId || !username) {
       alert("Debe ingresar un ID de sala y estar autenticado.");
       return;
     }
 
+    loadHistoryBeforeSocket(roomId);
+    connectToRoom();
+  }
+
+  function loadHistoryBeforeSocket(roomId) {
+    fetch(`/api/chat/${roomId}/history`, {
+      credentials: 'include'
+    })
+      .then(res => res.json())
+      .then(history => {
+        history.forEach(appendMessage);
+      })
+      .catch(err => {
+        console.error("❌ Error cargando historial:", err);
+      });
+  }
+
+  function connectToRoom() {
     const socket = new SockJS('/ws');
     stompClient = Stomp.over(socket);
     stompClient.debug = console.log;
@@ -92,23 +120,11 @@
     stompClient.connect({}, function () {
       console.log("🟢 Conectado con STOMP");
 
-      // ✅ Suscripción privada para recibir historial
-      stompClient.subscribe(`/topic/private/${username}`, function (message) {
-        const history = JSON.parse(message.body);
-        if (Array.isArray(history)) {
-          history.forEach(appendMessage);
-        } else {
-          appendMessage(history);
-        }
-      });
-
-      // ✅ Canal público de la sala para mensajes en vivo
       stompClient.subscribe(`/topic/chat/${roomId}`, function (message) {
         const msg = JSON.parse(message.body);
         appendMessage(msg);
       });
 
-      // 📡 Solicitar historial al backend
       stompClient.send(`/app/chat/${roomId}/join`, {}, JSON.stringify({
         sender: username,
         type: "JOIN"
@@ -129,6 +145,19 @@
       }));
       document.getElementById("message").value = '';
     }
+  }
+
+  function logout() {
+    fetch('/logout', {
+      method: 'POST',
+      credentials: 'include'
+    })
+      .then(() => {
+        window.location.href = '/login';
+      })
+      .catch(err => {
+        console.error("❌ Error al cerrar sesión:", err);
+      });
   }
 </script>
 
